--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ### Directories in CS648 Repository ###
 Assignment-5/node_modules/
 Assignment-5/.DS_Store
+Assignment-12/my-app/node_modules/
 
 
 ### macOS ###
