--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 Assignment-5/node_modules/
 Assignment-5/.DS_Store
 Assignment-12/my-app/node_modules/
-
+Assignment-13/assignment13/node_modules/
 
 ### macOS ###
 # General
